--- a/frontend/src/Components/Seats/Seats.css
+++ b/frontend/src/Components/Seats/Seats.css
@@ -97,8 +97,10 @@
 
 .seats .passenger-modal{
     position: fixed;
+    width: 300px;
     top: 50vh;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 3;
     padding: 30px;
     border: 1px solid grey;
