--- a/frontend/src/styles/TablePage.css
+++ b/frontend/src/styles/TablePage.css
@@ -55,6 +55,23 @@
     border: 2px solid rgb(235, 235, 235);
 }
 
+.table-page .table-container::-webkit-scrollbar {
+    width: 12px;  /* Set the width of the scrollbar */
+    height: 12px; /* Set the height of the scrollbar for horizontal scroll */
+  }
+  
+  /* Customize the scrollbar itself */
+  .table-page .table-container::-webkit-scrollbar-thumb {
+    background-color: #ff3131;
+    border: 4px solid #f1f1f1 ;
+  }
+  
+  
+
+  .table-page .table-container::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+
 .table-page .table-container .loading{
     position: absolute;
     top: 50%;
