--- a/frontend/src/Pages/UserPage/ChatBot.css
+++ b/frontend/src/Pages/UserPage/ChatBot.css
@@ -2,11 +2,11 @@
     position: fixed;
     z-index: 3;
     background-color: white;
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: 1px solid rgb(177, 177, 177);
-    box-shadow:  0 0 5px 3px rgb(202, 202, 202);
+    box-shadow:  0 0 5px 3px #ff8383;
     bottom: 20px;
     right: 20px;
 }
