--- a/frontend/src/Pages/UserPage/ChangeEmail.css
+++ b/frontend/src/Pages/UserPage/ChangeEmail.css
@@ -1,33 +1,56 @@
 .change-email{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    height: calc(100vh - 100px);
+}
+
+.change-email > img{
+    width: 600px;
+    height: 500px;
+}
+
+
+.change-email .container{
     padding: 30px;
     background-color: white;
-    position: absolute;
     width: 350px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     border-radius: 20px;
     box-shadow: 0 0 10px 3px rgb(105, 105, 105, 0.5);
 }
 
+.change-email .container .error{
+    color: #ff3131;
+}
+
+.change-email .container > span{
+    color: #ff3131;
+    margin-top: 20px;
+}
+
 .change-email .input-container{
     width: 100%;
+    margin-top: 30px;
     position: relative;
 }
 
 .change-email input{
     width: 100%;
-    height: 40px;
+    height: 45px;
     padding-left: 8px;
     outline: none;
+    border-radius: 10px;
+    font-size: 15px;
     box-sizing: border-box;
+    border: 1px solid rgb(117, 117, 117);
 }
 
 .change-email input:focus{
-    border: 1px solid #ff3131;
+    border: 2px solid #ff3131;
 }
 
-.change-email span{
+.change-email .input-container span{
     font-size: 14px;
     position: absolute;
     top: 8px;
@@ -49,16 +72,31 @@
     visibility: hidden;
 }
 
-.change-email button{
+.change-email .submit-btn{
     background-color: #ff3131;
     color: white;
+    border-radius: 10px;
     border: none;
     width: 100%;
-    height: 35px;
+    height: 40px;
     margin-top: 30px;
+    font-size: 15px;
     cursor: pointer;
 }
 
-.change-email button:hover{
+.change-email .submit-btn:hover{
     background-color: #ffa2a2;
+}
+
+.change-email .resend-btn{
+    margin-top: 30px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+@media screen and (max-width: 1100px){
+    .change-email > img{
+        display: none;
+    }
 }
