--- a/frontend/src/Pages/UserPage/ChangePassword.css
+++ b/frontend/src/Pages/UserPage/ChangePassword.css
@@ -1,24 +1,34 @@
 .change-password{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    height: calc(100vh - 100px);
+}
+
+.change-password > img{
+    width: 650px;
+    height: 500px;
+}
+
+.change-password form{
     border: 1px solid rgb(172, 172, 172);
     box-shadow: 0 0 15px 3px rgb(184, 184, 184);
     padding: 30px;
     border-radius: 25px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
-    width: 280px;
+    width: 320px;
 }
 
-.change-password > div{
+.change-password form > div{
     margin-bottom: 30px;
     position: relative;
 }
 
 .change-password input{
     width: 100%;
-    height: 30px;
+    height: 35px;
+    font-size: 15px;
     border: 1px solid rgb(100, 100, 100);
     outline: none;
 }
@@ -26,7 +36,7 @@
 .change-password div > button{
     position: absolute;
     right: 2px;
-    bottom: 2px;
+    bottom: 5px;
     width: 40px;
     height: 30px;
     background-color: white;
@@ -39,16 +49,23 @@
     height: 100%;
 }
 
-.change-password > button{
+.change-password form > button{
     background-color: #ff3131;
     color: white;
-    width: 130px;
-    height: 25px;
+    width: 150px;
+    height: 35px;
     float: right;
+    font-size: 15px;
     border: none;
     cursor: pointer;
 }
 
-.change-password > button:hover{
+.change-password form > button:hover{
     background-color: #ff9c9c;
+}
+
+@media screen and (max-width: 1100px){
+    .change-password > img{
+        display: none;
+    }
 }
